manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: wisecow
  labels:
    name: wisecow
