manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-depl
  namespace: wisecow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: skinatro/wisecow:latest
        ports:
        - containerPort: 4499
