manifests/wisecow-ing.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
  namespace: wisecow
spec:
  type: ClusterIP
  selector:
    app: wisecow
  ports:
  - name: http
    port: 80 
    targetPort: 4499
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ing
  namespace: wisecow
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-svc
            port:
              number: 80
